2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs
	* t/5.t: Fix the stack handling in Glib::Object::get to be robust
	against stack movement due to reallocation.  This can happen if a
	subclass' GET_PROPERTY triggers a stack resize.  Patch by Kevin
	Ryde.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* MakeHelper.pm (postamble_docs_full): Fix the POD index
	generation.  For five months now, broken index pages (like
	Glib::index) were being created due to shell command quoting
	issues.

2008-08-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/e.t
	* GValue.xs (_gperl_sv_from_value_internal): Handle NULL
	GParamSpecs gracefully by returning undef.

	* GParamSpec.xs (newSVGParamSpec): Croak on NULL GParamSpecs.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs (g_object_new): Check that we got a correct number of
	arguments.

	* t/2.t: Fix a typo uncovered by the above change.

2008-07-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GType.xs: In the overloaded flags operators, don't choke on
	undef in the swap argument.  This happens when a normal 'x'
	operator is used for handling 'x='.  Patch by Kevin Ryde.

2008-06-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs (gperl_get_object_check): Croak on objects that don't
	carry magic.

2008-06-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.183.

2008-05-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GSignal.xs: In the xsub for g_signal_add_emission_hook, make
	sure that the type class exists before we try to fetch information
	about one of its signals.

2008-05-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* Glib.pm
	* t/c.t: Overload '!=' and 'ne' for flags values for consistency.

2008-05-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>
